zerocopy-derive/tests/ui-msrv/msrv_specific.stderr
error[E0463]: can't find crate for `zerocopy`
  --> tests/ui-msrv/msrv_specific.rs:13:1
   |
13 | extern crate zerocopy;
   | ^^^^^^^^^^^^^^^^^^^^^^ can't find crate
